# Course_Project

./: .gitignore  CMakeLists.txt  Dockerfile  FileStorageManager.cpp  FileStorageManager.h  README.md  Server.cpp  Server.h  main.cpp
Files/: index.html
client_src/: CMakeLists.txt  Client.cpp  Client.h  client.cpp  main.cpp
data_structure/: InvertedIndex.cpp  InvertedIndex.h  TaskQueue.h  ThreadPool.cpp  ThreadPool.h  ThreadSafeHashMap.h
python_client_src/: Client.py  main.py  requirement.txt
src/: FileStorageManager.cpp  FileStorageManager.h  Scheduler.cpp  Scheduler.h  Server.cpp  Server.h  Server_linux.cpp  Server_linux.h  Server_win.cpp  Server_win.h  main.cpp
src/data_structure/: InvertedIndex.cpp  InvertedIndex.h  TaskQueue.h  TaskQueue.tpp  ThreadPool.cpp  ThreadPool.h  ThreadSafeHashMap.h  ThreadSafeHashMap.tpp
src/test/: InvertedIndexTest.cpp  InvertedIndexTest.h  TaskQueueTest.cpp  TaskQueueTest.h  TestSuite.cpp  TestSuite.h  ThreadPoolTest.cpp  ThreadPoolTest.h  ThreadSafeHashMapTest.cpp  ThreadSafeHashMapTest.h
src/utils/: Document.h  RequestType.h  Response.h
utils/: Request.h  RequestType.h  Response.h
